--- a/app/views/gifs/new.html.erb
+++ b/app/views/gifs/new.html.erb
@@ -1,5 +1,11 @@
 <h1>New gif</h1>
 
+<% if @gif.errors.any? %>
+  <% @gif.errors.full_messages.each do | message| %>
+    <p style="color: red"><%= message %></p>
+  <% end %>
+<% end %>
+
 <%= form_for @gif do |f| %>
   <%= f.label :url, "URL" %><br>
   <%= f.text_field :url %><br>
